[package]
name = "reth-network-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Network interfaces"

[lints]
workspace = true

[dependencies]
# reth
reth-primitives.workspace = true
reth-rpc-types.workspace = true
reth-discv4 = { workspace = true, optional = true }
reth-eth-wire = { workspace = true, optional = true }
alloy-chains.workspace = true
# io
serde = { workspace = true, features = ["derive"], optional = true }

# misc
async-trait.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }

[features]
default = ["serde", "full"]
serde = ["dep:serde"]
optimism = []
full = ["dep:reth-discv4", "dep:reth-eth-wire"]
